--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
-    
+    <!-- header introduttivo della pagina -->
+    <header>
+        <h1>Il mio viaggio a Londra</h1>
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="ruota">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="vista">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="bigben">
+        <hr>
+    </header>
 </body>
+
 </html>
