add table example

--- a/index.html
+++ b/index.html
@@ -16,6 +16,35 @@
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="bigben">
         <hr>
     </header>
+
+    <!-- sezione spese -->
+    <section>
+        <h3>le mie spese</h3>
+
+        <table>
+            <thead>
+                <tr align="center">
+                    <th>numero</th>
+                    <th>descrizione</th>
+                    <th>costo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>elemento</td>
+                    <td>elemensssssssssssssssssto</td>
+                    <td>elemento</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2">totale</td>
+                    <td>360€</td>
+                </tr>
+            </tfoot>
+
+        </table>
+    </section>
 </body>
 
 </html>
