--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h3>le mie spese</h3>
 
         <table>
-            <thead>
-                <tr align="center">
+            <thead align="center">
+                <tr>
                     <th>numero</th>
                     <th>descrizione</th>
                     <th>costo</th>
@@ -31,15 +31,25 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>elemento</td>
-                    <td>elemensssssssssssssssssto</td>
-                    <td>elemento</td>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>camera d'albergo</td>
+                    <td>200€</td>
+                </tr>
+                <tr>
+                    <td>32</td>
+                    <td>fish&chips</td>
+                    <td>320€</td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
                     <td colspan="2">totale</td>
-                    <td>360€</td>
+                    <td>640€</td>
                 </tr>
             </tfoot>
 
