--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="ruota">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="vista">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="bigben">
-        <hr>
     </header>
+    <hr>
 
     <!-- sezione spese -->
     <section>
@@ -55,6 +55,21 @@
 
         </table>
     </section>
+    <hr>
+    
+    <!-- cose da fare -->
+    <section>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li> visitare la torre di londra <font color="green">&#10003;</font></li>
+            <li> fare le boccacce alle guardie della regina  <font color="green">&#10003;</font></li>
+            <li> opporre resistenza durante l'arresto <font color="green">&#10003;</font></li>
+            <li> convincere qualcuno a pagare la cauzione <font color="red">&#10006;</font></li>
+        </ul>
+
+    </section>
+    <hr>
+
 </body>
 
 </html>
