--- a/index.html
+++ b/index.html
@@ -66,7 +66,37 @@
             <li> opporre resistenza durante l'arresto <font color="green">&#10003;</font></li>
             <li> convincere qualcuno a pagare la cauzione <font color="red">&#10006;</font></li>
         </ul>
+    </section>
+    <hr>
 
+    <!-- info utili -->
+    <section>
+        <h3>Info utili</h3>
+        <ol>
+            <li>
+                Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Polizia</li>
+                    <li><strong>111</strong> - Assistenza medica</li>
+                </ul>
+            </li>
+            <li>
+                Hotel
+                <ul>
+                    <li><strong>Nome Hotel</strong>: Scottland yard</li>
+                    <li><strong>Indirizzo Hotel</strong>: White Chapel - London - ecc ecc Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </li>
+            <li>
+                aereo
+                <ul>
+                    <li><strong>volo Andata</strong>: Y1234X, ore 9:30 da Milano malpensa</li>
+                    <li><strong>volo Ritorno</strong>: Solo se permettono estradizione</li>
+                </ul>
+            </li>
+            <li><strong>NOTA:</strong> permalosette le guardie della regina </li>
+        </ol>
     </section>
     <hr>
 
