--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
     </section>
     <hr>
 
+    <!-- Foto -->
+    <section>
+        <img height="350px" src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="CupolaCattedraleMarypoppins">
+        <img height="350px" src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="IlPonteDellaCanzoneCheInRealtàNonèMaiCaduto">
+        <img height="350px" src="https://media-cdn.tripadvisor.com/media/photo-s/0a/d7/ec/af/segrete.jpg" alt="CinqueStelleTripAdvisor">
+    </section>
+
 </body>
 
 </html>
